--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "logo": "https://telegra.ph/file/7ffa8d18b9b7f1b51a81e.jpg",
     "description": "bot untuk memutar musik di obrolan suara telegram.",
     "keywords": ["music", "voice chat", "telegram"],
-    "repository": "https://github.com/levina-lab/veezmusic",
+    "repository": "https://github.com/Pakeraja/veezmusic",
     "stack": "container",
     "env": {
         "SESSION_NAME": {
